Update DUCTF21 and insctf23

--- a/_posts/2021-09-26- DUCTF21.md
+++ b/_posts/2021-09-26- DUCTF21.md
@@ -7,7 +7,7 @@ tags: [CTFresults]
 math: true
 mermaid: true
 ---
-![Desktop View](/postsimg/DUCTF21score.jpg){: width="972" height="589" }
+![DownUnder 2021 scoreboard](/postsimg/DUCTF21score.jpg){: width="972" height="589" }
 
 This year the DownUnderCTF was tougher but despite this we managed to reach the top 20 (almost top 15!).
 ---
