--- a/_posts/2023-01-24-insctf23.md
+++ b/_posts/2023-01-24-insctf23.md
@@ -6,10 +6,8 @@ categories: [Blogging]
 tags: [CTFresults]
 math: true
 mermaid: true
-image:
-  path: /postsimg/INSCTF23score.jpg
-  lqip: data:image/webp;base64,UklGRpoAAABXRUJQVlA4WAoAAAAQAAAADwAABwAAQUxQSDIAAAARL0AmbZurmr57yyIiqE8oiG0bejIYEQTgqiDA9vqnsUSI6H+oAERp2HZ65qP/VIAWAFZQOCBCAAAA8AEAnQEqEAAIAAVAfCWkAALp8sF8rgRgAP7o9FDvMCkMde9PK7euH5M1m6VWoDXf2FkP3BqV0ZYbO6NA/VFIAAAA
-  alt: scoreboard
 ---
-Good and Unexpected result at Insomnihack CTF 2023 - Srdnlen among the top 20 teams in the final scoreboard. Thanks to the Insomnihack Team!  
+![Insomnihack CTF 2023 scoreboard](/postsimg/INSCTF23score.jpg){: width="972" height="589" }
+
+Good result at Insomnihack CTF 2023 - Srdnlen among the top 20 teams in the final scoreboard. Thanks to the Insomnihack Team!  
 ---
