Update posts image visualization

--- a/_posts/2022-10-29-SrdnlenCTF22.md
+++ b/_posts/2022-10-29-SrdnlenCTF22.md
@@ -11,5 +11,7 @@ image:
   lqip: data:image/webp;base64,UklGRpoAAABXRUJQVlA4WAoAAAAQAAAADwAABwAAQUxQSDIAAAARL0AmbZurmr57yyIiqE8oiG0bejIYEQTgqiDA9vqnsUSI6H+oAERp2HZ65qP/VIAWAFZQOCBCAAAA8AEAnQEqEAAIAAVAfCWkAALp8sF8rgRgAP7o9FDvMCkMde9PK7euH5M1m6VWoDXf2FkP3BqV0ZYbO6NA/VFIAAAA
   alt: scoreboard
 ---
+![SrdnlenCTF 2022 logo](/postsimg/SrdnlenCTF22.jpg){: width="972" height="589" }
+
 We are so happy to announce our first CTF starting on Saturday 8/10 at 12:00 CEST time. You will play with web, crypto, reverse, pwn, forensic and misc challenges for 24 hours, both if you are beginner or advanced player. Enjoy it !!
 ---
