--- a/_posts/2022-11-13-BuckCTF-22.md
+++ b/_posts/2022-11-13-BuckCTF-22.md
@@ -6,8 +6,10 @@ categories: [Blogging]
 tags: [CTFresults]
 math: true
 mermaid: true
+image:
+  path: /postsimg/Buckeye22score.jpg
+  lqip: data:image/webp;base64,UklGRpoAAABXRUJQVlA4WAoAAAAQAAAADwAABwAAQUxQSDIAAAARL0AmbZurmr57yyIiqE8oiG0bejIYEQTgqiDA9vqnsUSI6H+oAERp2HZ65qP/VIAWAFZQOCBCAAAA8AEAnQEqEAAIAAVAfCWkAALp8sF8rgRgAP7o9FDvMCkMde9PK7euH5M1m6VWoDXf2FkP3BqV0ZYbO6NA/VFIAAAA
+  alt: scoreboard
 ---
-![BuckeyeCTF 2022 scoreboard](/postsimg/Buckeye22score.jpg){: width="972" height="589" }
-
 A deserved fourth place gained by Srdnlen last weekend at Buckeye CTF 2022. Just 50 points from the podium!
 ---
