Revert "Update of posts CTFtime22 and HackCTF22"
This reverts commit 7e707a8336f2b59f91032b2932a182f448ab2961.

--- a/_posts/2022-12-31- CTFTime22.md
+++ b/_posts/2022-12-31- CTFTime22.md
@@ -7,7 +7,7 @@ tags: [CTFresults]
 math: true
 mermaid: true
 ---
-![CTFtime 2022 scoreboard](/postsimg/CTFtime22score.jpg){: width="972" height="589" }
+![Insomnihack CTF 2023 scoreboard](/postsimg/CTFtime22score.jpg){: width="972" height="589" }
 
 A great year for Srdnlen - 3rd and 55th place nationally and globally, respectively. May 2023 be full of new goals, Happy new year !
 ---
