Revert "Update 2023-01-24-insctf23.md"
This reverts commit f8535a6f19ec09b614bd2614451a53f198c85ebb.

--- a/_posts/2023-01-24-insctf23.md
+++ b/_posts/2023-01-24-insctf23.md
@@ -7,7 +7,7 @@ tags: [CTFresults]
 math: true
 mermaid: true
 ---
-![Insomnihack CTF 2023 scoreboard](/postsimg/INSCTF23score.jpg)
+![Insomnihack CTF 2023 scoreboard](/postsimg/INSCTF23score.jpg){: width="972" height="589" }
 
 Good result at Insomnihack CTF 2023 - Srdnlen among the top 20 teams in the final scoreboard. Thanks to the Insomnihack Team!  
 ---
